--- a/streetfighter.css
+++ b/streetfighter.css
@@ -1,18 +1,32 @@
 header {
-    color:#FFFFFF;
+    color: #000000;
+    background-image: linear-gradient(#000000, #CCCCCC);
+    opacity:.50;
     font-family: "Century Gothic";
     height: 60px;
-    padding-top: 10px;
     text-align: center;
-} 
+    padding-top: 5px;
+    padding-bottom: 15px;
+}
+
 nav {
     font-family: "Century Gothic";
     font-style:italic;
     text-align: center;
 }
 
+nav a:hover {
+    color: #CCCCCC;
+}
+
 body {
     background-image: url(wall_brick_texture_shadow_black_and_white_44987_1920x1080.jpg);
+    
+}
+
+p {
+    text-indent: 50px;
+    text-align: justify;
     
 }
 h1 {
@@ -21,7 +35,7 @@ h1 {
 }
 
 h2 {
-    color:"gainsboro";
+    color: #CCCCCC;
     text-shadow: 1px, 1px, 1px #003300;
     font-family: "Century Gothic";
     font-weight:bold;
@@ -33,23 +47,36 @@ footer {
     font-style: Italic;
     text-align: center;
     font-family: "Century Gothic";
-    padding: 10px;
+    padding: 60px;
     color: #FFFFFF;
     
 }
 
 main {
     padding-top: 1px;
-    padding-left: 10px;
+    padding-left: 150px;
     padding-right: 10px;
     padding-bottom: 10px;
     display:block; 
     font-family: "Century Gothic";
     color: #FFFFFF;
+    background-image: linear-gradient (#CCCCCC #000000);
+    width: 80%;
 }
 
 li {
     list-style-image:url(punchkickbuttons.jpg);
     list-style-position: inside;
     text-shadow: 1px, 1px, 1px #FFFFFF;
+}
+
+img {
+    padding-left:175px;
+}
+
+img:hover {
+    opacity:.60;
+    filter: alpha(opacity=50);
     
+}
+
